--- a/src/main/resources/templates/front/angular/formComponent.mustache
+++ b/src/main/resources/templates/front/angular/formComponent.mustache
@@ -9,10 +9,25 @@ import { FieldDefinition } from '../../../shared/components/models/field-definit
 import { EntityToolbarActionComponent } from '../../../shared/components/view-toolbar-actions/view-toolbar-actions';
 import {toDatetimeLocalString} from '../../../shared/hooks/Parsing';
 
+import {EntityPickerComponent} from '../../../shared/picker/app-entity-picker';
+
+
+{{#fields}}
+{{#isManyToOne}}
+import {{openOne}} {{nameCapitalized}} } from '../../{{name}}/models/{{name}}.model';
+import  {{openOne}} {{nameCapitalized}}Service } from '../../{{name}}/services/{{name}}.service';
+{{/isManyToOne}}
+{{/fields}}
+
+
 @Component({
   selector: 'app-{{entityLowerCase}}-form',
   standalone: true,
-  imports: [CommonModule, ReactiveFormsModule, EntityToolbarActionComponent],
+  imports: [CommonModule,
+   ReactiveFormsModule,
+    EntityPickerComponent,
+    EntityToolbarActionComponent
+    ],
   templateUrl: './{{entityLowerCase}}-form.component.html',
 })
 export class {{entity}}FormComponent implements OnInit {
@@ -26,15 +41,31 @@ export class {{entity}}FormComponent implements OnInit {
   readonly isEdit = signal(!!this.id);
   readonly isLoading = signal(false);
 
-  readonly form = this.fb.group({
     {{#fields}}
+    {{#isManyToOne}}
+    private readonly  {{name}}Service = inject({{nameCapitalized}}Service);
+    {{name}}s  =   signal<{{nameCapitalized}}[]>([]);
+    {{/isManyToOne}}
+    {{/fields}}
+
+  readonly form = this.fb.group({
+    id: [ ""  ],
+    {{#fields}}
+    {{^isId}}
     {{name}}: [ {{{defaultValue}}} {{^nullable}}, Validators.required{{/nullable}} ],
+    {{/isId}}
     {{/fields}}
   });
 
   readonly fields: FieldDefinition[] = [
     {{#fields}}
-    { name: '{{name}}', displayName: '{{displayName}}', type: '{{type}}'{{#options}}, options: {{options}}{{/options}}, entityType: '{{entityType}}' },
+    { name: '{{name}}',
+    displayName: '{{displayName}}',
+     type: '{{type}}'{{#options}}, options: {{options}}{{/options}},
+      entityType: '{{entityType}}' ,
+      inputType: '{{inputType}}',
+      relation: '{{relation}}'
+      },
     {{/fields}}
   ];
 
@@ -77,6 +108,11 @@ export class {{entity}}FormComponent implements OnInit {
         });
       }
     }
+
+    {{#hasManyToOne}}
+    this.fetchDeps();
+    {{/hasManyToOne}}
+
   }
 
   save() {
@@ -95,7 +131,7 @@ export class {{entity}}FormComponent implements OnInit {
     {{#isDate}}
     data.{{name}} = new Date(data.{{name}} || now).toISOString();
     {{/isDate}}
-{{/fields}}
+    {{/fields}}
 
     const request = this.isEdit()
       ? this.service.update(this.id!, data)
@@ -120,4 +156,25 @@ export class {{entity}}FormComponent implements OnInit {
    onDelete() {
         //todo
       }
+
+    {{#hasManyToOne}}
+    fetchDeps() {
+        {{#fields}}
+        {{#isManyToOne}}
+         this.{{name}}Service.fetch(0,1000).subscribe(data => this.{{name}}s.set(data.content));
+        {{/isManyToOne}}
+        {{/fields}}
+    }
+    {{/hasManyToOne}}
+
+    getEntities(name: string) {
+        {{#fields}}
+        {{#isManyToOne}}
+        if (name === '{{name}}') return this.{{name}}s();
+        {{/isManyToOne}}
+        {{/fields}}
+    return [];
+    }
+
+
 }
